added meta tags & google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,9 @@
 <!doctype html>
-<html>
+<html class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!-- Meta Tags for SEO -->
   <title>R.K. Alkaline Water - Pure, Healthy, and Refreshing Alkaline Water</title>
@@ -22,23 +17,39 @@
   <meta property="og:title" content="R.K. Alkaline Water - Pure, Healthy, and Refreshing Alkaline Water">
   <meta property="og:description"
     content="Welcome to R.K. Alkaline Water! We deliver pure, healthy, and refreshing alkaline water to your doorstep. Enhance your well-being with our premium quality water.">
-  <meta property="og:image" content="URL_to_your_image"> <!-- Replace with the URL to your image -->
-  <meta property="og:url" content="URL_to_your_website"> <!-- Replace with the URL to your website -->
+  <meta property="og:image" content="https://rk-water.vercel.app/Images/Logo%20(3).png">
+  <meta property="og:url" content="https://rk-water.vercel.app/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="https://rk-water.vercel.app/">
   <meta name="twitter:title" content="R.K. Alkaline Water - Pure, Healthy, and Refreshing Alkaline Water">
   <meta name="twitter:description"
     content="Welcome to R.K. Alkaline Water! We deliver pure, healthy, and refreshing alkaline water to your doorstep. Enhance your well-being with our premium quality water.">
-  <meta name="twitter:image" content="URL_to_your_image"> <!-- Replace with the URL to your image -->
-  <meta name="twitter:url" content="URL_to_your_website"> <!-- Replace with the URL to your website -->
+  <meta name="twitter:image" content="https://rk-water.vercel.app/Images/Logo%20(3).png">
+  <meta name="twitter:url" content="https://rk-water.vercel.app/">
 
   <!-- Canonical Link -->
-  <link rel="canonical" href="URL_to_your_website"> <!-- Replace with the URL to your website -->
+  <link rel="canonical" href="https://rk-water.vercel.app/">
 
   <!-- Favicon -->
-  <link rel="icon" href="URL_to_your_favicon"> <!-- Replace with the URL to your favicon -->
+  <link rel="icon" href="./Images/fav-icon.png">
+
+  <link href="./output.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CTLD01Q1JE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-CTLD01Q1JE');
+  </script>
 </head>
 
 <body>
