--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Meta Tags for SEO -->
-  <title>R.K. Alkaline Water - Pure, Healthy, and Refreshing Alkaline Water</title>
   <meta name="description"
     content="Welcome to R.K. Alkaline Water! We deliver pure, healthy, and refreshing alkaline water to your doorstep. Enhance your well-being with our premium quality water.">
   <meta name="keywords"
     content="Alkaline Water, Healthy Water, Pure Water, Water Delivery, Hydration, Essential Minerals">
-  <meta name="author" content="R.K. Alkaline Water">
+  <meta name="author" content="Akash Bambhaniya">
 
   <!-- Open Graph Meta Tags for Social Media Sharing -->
   <meta property="og:title" content="R.K. Alkaline Water - Pure, Healthy, and Refreshing Alkaline Water">
@@ -28,6 +27,8 @@
     content="Welcome to R.K. Alkaline Water! We deliver pure, healthy, and refreshing alkaline water to your doorstep. Enhance your well-being with our premium quality water.">
   <meta name="twitter:image" content="https://rk-water.vercel.app/Images/Logo%20(3).png">
   <meta name="twitter:url" content="https://rk-water.vercel.app/">
+
+  <title>R.K. Alkaline Water - Pure, Healthy, and Refreshing Alkaline Water</title>
 
   <!-- Canonical Link -->
   <link rel="canonical" href="https://rk-water.vercel.app/">
