update google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CTLD01Q1JE"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DF3S4QFGG6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-CTLD01Q1JE');
+    gtag('config', 'G-DF3S4QFGG6');
   </script>
 </head>
 
