--- a/public/index.html
+++ b/public/index.html
@@ -122,16 +122,24 @@
     </div>
   </main>
 
-  <section id="about-me">
+  <section id="about-us">
     <div class="container mx-auto sm:px-0 px-4 py-20 grid grid-cols-1 sm:grid-cols-2 gap-4">
-      <div class="flex flex-col items-start">
+      <div class="flex flex-col items-start gap-2">
         <p class="font-laila text-3xl font-bold">About <span class="text-primary">Us</span></p>
         <p class="font-bold text-lg font-normal font-be-vietnam">
-          Welcome to R.K. Alkaline Water! We are passionate about providing our customers with the purest and healthiest
-          alkaline water. Our mission is to enhance your well-being by delivering alkaline water that neutralizes body
-          acidity,
-          improves hydration, and provides essential minerals.
+          Welcome to R.K. Alkaline Water! We provide pure, healthy alkaline water to enhance your well-being. Our
+          advanced filtration ensures top-quality water that neutralizes acidity, improves hydration, and supplies
+          essential minerals
+          like calcium and magnesium.
         </p>
+
+        <p class="font-bold text-lg font-normal font-be-vietnam">
+          The benefits of our alkaline water include better digestion, boosted immunity, detoxification, and increased
+          energy. We are committed to sustainability, using recyclable bottles.
+        </p>
+
+        <p class="font-bold text-lg font-normal font-be-vietnam">Choose R.K. Alkaline Water for a balanced, healthy
+          lifestyle. Cheers to a healthier, more hydrated you!</p>
         <button type="button" class="text-white rounded-md bg-btn-gradient font-be-vietnam px-4 py-2 shadow-md">Contact
           Us</button>
       </div>
@@ -144,16 +152,16 @@
           <img src="./Images/Mission.png" alt="" class="h-14" />
           <h1 class="text-2xl font-laila font-bold">Our<span class="text-primary"> Mission</span></h1>
         </div>
-        <h1 class="font-be-vietnam font-bold text-xl">To provide the highest quality alkaline water for a healthier
-          life.</h1>
+        <h1 class="font-be-vietnam font-bold text-xl">Delivering premium alkaline water to boost health, balance body
+          pH, and improve hydration.</h1>
       </div>
       <div class="border flex flex-col p-8 w-full gap-4 rounded-md">
         <div class="flex items-center gap-2">
           <img src="./Images/Vision.png" alt="" class="h-14" />
           <h1 class="text-2xl font-laila font-bold">Our<span class="text-primary"> Vision</span></h1>
         </div>
-        <h1 class="font-be-vietnam font-bold text-xl">To be the leading provider of alkaline water, known for our
-          commitment to quality and customer satisfaction.</h1>
+        <h1 class="font-be-vietnam font-bold text-xl">To set the standard in alkaline water, ensuring excellence in
+          quality and customer happiness.</h1>
       </div>
     </div>
   </section>
@@ -238,24 +246,24 @@
         <div class="bg-primary rounded-xl w-full flex py-8 md:flex-row flex-col">
           <div
             class="flex flex-col md:w-[25%] w-full items-center md:border-r-[1px] border-b-[1px] md:border-b-[0px] p-5">
-            <p class="text-white font-laila md:text-[2rem] text-[3rem]">6.8K+</p>
+            <p class="text-white font-laila md:text-[2rem] text-[3rem]">3000+</p>
             <p class="text-secondary font-be-vietnam md:text-[1.2rem] text-[1.5rem] w-[70%] text-center">Water Bottled
               Delivered</p>
           </div>
           <div
             class="flex flex-col md:w-[25%] w-full items-center md:border-r-[1px] border-b-[1px] md:border-b-[0px] p-5">
-            <p class="text-white font-laila md:text-[2rem] text-[3rem]">8+</p>
+            <p class="text-white font-laila md:text-[2rem] text-[3rem]">2+</p>
             <p class="text-secondary font-be-vietnam md:text-[1.2rem] text-[1.5rem] w-[70%] text-center">Years Of
               Experienced</p>
           </div>
           <div
             class="flex flex-col md:w-[25%] w-full items-center md:border-r-[1px] border-b-[1px] md:border-b-[0px] p-5">
-            <p class="text-white font-laila md:text-[2rem] text-[3rem]">760+</p>
+            <p class="text-white font-laila md:text-[2rem] text-[3rem]">500+</p>
             <p class="text-secondary font-be-vietnam md:text-[1.2rem] text-[1.5rem] w-[70%] text-center">Customers Happy
               With Us</p>
           </div>
           <div class="flex flex-col md:w-[25%] w-full items-center p-5">
-            <p class="text-white font-laila md:text-[2rem] text-[3rem]">20 +</p>
+            <p class="text-white font-laila md:text-[2rem] text-[3rem]">4+</p>
             <p class="text-secondary font-be-vietnam md:text-[1.2rem] text-[1.5rem] w-[70%] text-center">Professional
               Team Members</p>
           </div>
@@ -268,23 +276,23 @@
     <div class="flex flex-col gap-4">
       <h1 class="text-3xl font-laila font-bold">Our<span class="text-primary"> Services</span></h1>
       <div class="grid grid-cols-1 sm:grid-cols-3 gap-5">
-        <div class="flex flex-col bg-[#E7F8FF] hover:bg-hover-bg hover:text-hover-text rounded-2xl pb-8">
+        <div class="flex flex-col bg-secondaryLight rounded-2xl gap-4">
           <img src="./Images/homedelivery.png" />
-          <p class="w-full font-laila font-bold text-center my-6">Home Delivery</p>
-          <p class="font-be-vietnam opacity-70 md:text-[0.7rem] text-[1rem] text-center px-10">Conveniently receive
-            premium alkaline water at your doorstep with our reliable home delivery service.</p>
+          <p class="font-laila font-bold text-center px-6">Home Delivery</p>
+          <p class="font-be-vietnam text-[1rem] text-center px-6 pb-6">Conveniently receive premium alkaline water at
+            your doorstep with our reliable home delivery service.</p>
         </div>
-        <div class="flex flex-col bg-[#E7F8FF] hover:bg-hover-bg hover:text-hover-text rounded-2xl pb-8">
+        <div class="flex flex-col bg-secondaryLight rounded-2xl gap-4">
           <img src="./Images/officeapply.png" />
-          <p class="w-full font-laila font-bold text-center my-6">Office Apply</p>
-          <p class="font-be-vietnam opacity-70 md:text-[0.7rem] text-[1rem] text-center px-10">Ensure your office stays
-            hydrated with our bulk alkaline water supply, tailored to fit your business needs.</p>
+          <p class="font-laila font-bold text-center px-6">Office Apply</p>
+          <p class="font-be-vietnam text-[1rem] text-center px-6 pb-6">Ensure your office stays hydrated with our bulk
+            alkaline water supply, tailored to fit your business needs.</p>
         </div>
-        <div class="flex flex-col bg-[#E7F8FF] hover:bg-hover-bg hover:text-hover-text rounded-2xl pb-8">
+        <div class="flex flex-col bg-secondaryLight rounded-2xl gap-4">
           <img src="./Images/event.png" />
-          <p class="w-full font-laila font-bold text-center my-6">Event water supply</p>
-          <p class="font-be-vietnam opacity-70 md:text-[0.7rem] text-[1rem] text-center px-10">Enhance your events with
-            our top-quality alkaline water, delivered and set up to keep your guests refreshed.</p>
+          <p class="font-laila font-bold text-center px-6">Event water supply</p>
+          <p class="font-be-vietnam text-[1rem] text-center px-6 pb-6">Enhance your events with our top-quality alkaline
+            water, delivered and set up to keep your guests refreshed.</p>
         </div>
       </div>
     </div>
@@ -374,7 +382,7 @@
     </div>
   </section>
 
-  <footer id="contact" class="bg-[#FAFAFA]">
+  <footer id="contact-us" class="bg-[#FAFAFA]">
     <div class="container mx-auto sm:px-0 px-4 py-20 flex flex-col items-center gap-4">
       <img src="./Images/Logo (3).png" class="md:w-[20vw]" />
 
@@ -406,13 +414,66 @@
         <div class="flex items-center gap-3 w-fit mt-2"><img src="./Images/phonee.png" class="w-5" /><span
             class="font-be-vietnam font-semibold text-[1.1rem]">+91 84908 56404</span></div>
       </div>
-      <div class="flex w-full justify-center gap-4">
-        <img src="./Images/twittericon.png" class="w-8" />
-        <img src="./Images/instaicon.png" class="w-8" />
-        <img src="./Images/fbicon.png" class="w-8" />
-        <img src="./Images/yticon.png" class="w-8" />
+      <div class="flex justify-center gap-2">
+        <a href="https://wa.me/+918490856404" target="_blank" aria-label="Whatsapp me" class="p-1 hover:bg-[#F5F5F5]">
+          <svg xmlns="http://www.w3.org/2000/svg" class="size-8" viewBox="0 0 48 48">
+            <path fill="#fff"
+              d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98c-0.001,0,0,0,0,0h-0.008c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303z">
+            </path>
+            <path fill="#fff"
+              d="M4.868,43.803c-0.132,0-0.26-0.052-0.355-0.148c-0.125-0.127-0.174-0.312-0.127-0.483l2.639-9.636c-1.636-2.906-2.499-6.206-2.497-9.556C4.532,13.238,13.273,4.5,24.014,4.5c5.21,0.002,10.105,2.031,13.784,5.713c3.679,3.683,5.704,8.577,5.702,13.781c-0.004,10.741-8.746,19.48-19.486,19.48c-3.189-0.001-6.344-0.788-9.144-2.277l-9.875,2.589C4.953,43.798,4.911,43.803,4.868,43.803z">
+            </path>
+            <path fill="#cfd8dc"
+              d="M24.014,5c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98h-0.008c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5 M24.014,42.974C24.014,42.974,24.014,42.974,24.014,42.974C24.014,42.974,24.014,42.974,24.014,42.974 M24.014,42.974C24.014,42.974,24.014,42.974,24.014,42.974C24.014,42.974,24.014,42.974,24.014,42.974 M24.014,4C24.014,4,24.014,4,24.014,4C12.998,4,4.032,12.962,4.027,23.979c-0.001,3.367,0.849,6.685,2.461,9.622l-2.585,9.439c-0.094,0.345,0.002,0.713,0.254,0.967c0.19,0.192,0.447,0.297,0.711,0.297c0.085,0,0.17-0.011,0.254-0.033l9.687-2.54c2.828,1.468,5.998,2.243,9.197,2.244c11.024,0,19.99-8.963,19.995-19.98c0.002-5.339-2.075-10.359-5.848-14.135C34.378,6.083,29.357,4.002,24.014,4L24.014,4z">
+            </path>
+            <path fill="#40c351"
+              d="M35.176,12.832c-2.98-2.982-6.941-4.625-11.157-4.626c-8.704,0-15.783,7.076-15.787,15.774c-0.001,2.981,0.833,5.883,2.413,8.396l0.376,0.597l-1.595,5.821l5.973-1.566l0.577,0.342c2.422,1.438,5.2,2.198,8.032,2.199h0.006c8.698,0,15.777-7.077,15.78-15.776C39.795,19.778,38.156,15.814,35.176,12.832z">
+            </path>
+            <path fill="#fff" fill-rule="evenodd"
+              d="M19.268,16.045c-0.355-0.79-0.729-0.806-1.068-0.82c-0.277-0.012-0.593-0.011-0.909-0.011c-0.316,0-0.83,0.119-1.265,0.594c-0.435,0.475-1.661,1.622-1.661,3.956c0,2.334,1.7,4.59,1.937,4.906c0.237,0.316,3.282,5.259,8.104,7.161c4.007,1.58,4.823,1.266,5.693,1.187c0.87-0.079,2.807-1.147,3.202-2.255c0.395-1.108,0.395-2.057,0.277-2.255c-0.119-0.198-0.435-0.316-0.909-0.554s-2.807-1.385-3.242-1.543c-0.435-0.158-0.751-0.237-1.068,0.238c-0.316,0.474-1.225,1.543-1.502,1.859c-0.277,0.317-0.554,0.357-1.028,0.119c-0.474-0.238-2.002-0.738-3.815-2.354c-1.41-1.257-2.362-2.81-2.639-3.285c-0.277-0.474-0.03-0.731,0.208-0.968c0.213-0.213,0.474-0.554,0.712-0.831c0.237-0.277,0.316-0.475,0.474-0.791c0.158-0.317,0.079-0.594-0.04-0.831C20.612,19.329,19.69,16.983,19.268,16.045z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </a>
+
+        <a href="https://www.instagram.com/rk_alkline_water/" aria-label="Instagram" target="_blank"
+          class="p-1 hover:bg-[#F5F5F5]">
+          <svg xmlns="http://www.w3.org/2000/svg" class="size-8" viewBox="0 0 48 48">
+            <radialGradient id="yOrnnhliCrdS2gy~4tD8ma_Xy10Jcu1L2Su_gr1" cx="19.38" cy="42.035" r="44.899"
+              gradientUnits="userSpaceOnUse">
+              <stop offset="0" stop-color="#fd5"></stop>
+              <stop offset=".328" stop-color="#ff543f"></stop>
+              <stop offset=".348" stop-color="#fc5245"></stop>
+              <stop offset=".504" stop-color="#e64771"></stop>
+              <stop offset=".643" stop-color="#d53e91"></stop>
+              <stop offset=".761" stop-color="#cc39a4"></stop>
+              <stop offset=".841" stop-color="#c837ab"></stop>
+            </radialGradient>
+            <path fill="url(#yOrnnhliCrdS2gy~4tD8ma_Xy10Jcu1L2Su_gr1)"
+              d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z">
+            </path>
+            <radialGradient id="yOrnnhliCrdS2gy~4tD8mb_Xy10Jcu1L2Su_gr2" cx="11.786" cy="5.54" r="29.813"
+              gradientTransform="matrix(1 0 0 .6663 0 1.849)" gradientUnits="userSpaceOnUse">
+              <stop offset="0" stop-color="#4168c9"></stop>
+              <stop offset=".999" stop-color="#4168c9" stop-opacity="0"></stop>
+            </radialGradient>
+            <path fill="url(#yOrnnhliCrdS2gy~4tD8mb_Xy10Jcu1L2Su_gr2)"
+              d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z">
+            </path>
+            <path fill="#fff"
+              d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5	s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z">
+            </path>
+            <circle cx="31.5" cy="16.5" r="1.5" fill="#fff"></circle>
+            <path fill="#fff"
+              d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12	C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18z">
+            </path>
+          </svg>
+        </a>
       </div>
-      <p class="text-gray-400 font-be-vietnam">©rkwater 2024, All rights reserved.</p>
+      <div>
+        <p class="text-gray-400 font-be-vietnam text-center">©&nbsp;R.K.Water 2024 | All rights reserved.</p>
+        <p class="text-gray-400 font-be-vietnam text-center">Designed By <a href="https://akashb.vercel.app/"
+            target="_blank" class="text-primary">Akash Bambhaniya</a></p>
+      </div>
     </div>
   </footer>
 
