--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
       </button>
 
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul class="flex flex-col md:flex-row gap-6 md:items-center">
+        <ul class="flex flex-col md:flex-row gap-6">
           <li>
             <a href="#home" class="nav-link font-poppins hover:text-primary text-base">Home</a>
           </li>
@@ -105,8 +105,8 @@
 
   <main id="home" class="w-full bg-secondaryLight pt-20 min-h-screen flex flex-col">
     <div class="container mx-auto sm:px-0 px-4 grid grid-cols-1 sm:grid-cols-2 gap-4 flex-1">
-      <div class="flex flex-col items-start justify-center gap-4">
-        <p class="text-primary text-5xl font-[laila] font-bold leading-normal">
+      <div class="flex flex-col items-start justify-start sm:justify-center gap-4 order-1 sm:order-none">
+        <p class="leading-normal sm:leading-normal text-primary text-4xl sm:text-5xl font-laila font-bold">
           Pure, Healthy, and <br />
           Refreshing Alkaline <br />
           Water
@@ -275,7 +275,7 @@
   <section id="services" class="container mx-auto sm:px-0 px-4 py-20">
     <div class="flex flex-col gap-4">
       <h1 class="text-3xl font-laila font-bold">Our<span class="text-primary"> Services</span></h1>
-      <div class="grid grid-cols-1 sm:grid-cols-3 gap-5">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
         <div class="flex flex-col bg-secondaryLight rounded-2xl gap-4">
           <img src="./Images/homedelivery.png" />
           <p class="font-laila font-bold text-center px-6">Home Delivery</p>
@@ -299,7 +299,7 @@
   </section>
 
   <section class="bg-primary p-10 w-full">
-    <div class="grid grid-cols-1 sm:grid-cols-4 gap-4">
+    <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
       <div class="flex flex-col items-center">
         <img src="./Images/svg1.png" class="h-16" alt="SVG 1" />
         <h1 class="font-be-vietnam text-white w-28 text-center mt-2">Purity To The Max</h1>
@@ -322,40 +322,40 @@
   <section id="products" class="container mx-auto sm:px-0 px-4 py-20">
     <div class="flex flex-col gap-4">
       <h1 class="font-laila text-3xl font-bold">Our <span class="text-primary">Products</span></h1>
-      <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
         <div class="relative shadow-md rounded-lg">
-          <img class="rounded-t-lg h-70 md:w-full" src="./Images/Rectangle 7407.png" alt="" />
+          <img class="rounded-t-lg h-70 w-full" src="./Images/Rectangle 7407.png" alt="" />
 
           <div class="p-5 flex flex-col gap-2">
-            <h5 class="text-2xl tracking-tight">Alkaline Water Dispenser (20L)</h5>
+            <h5 class="text-2xl">Alkaline Water Dispenser (20L)</h5>
 
             <p class="font-be-vietnam text-[#585858] text-[0.9rem]">Keep your home or office hydrated with our
               convenient 20-liter alkaline water dispenser, designed for easy use and consistent quality.</p>
-            <p class="text-primary text-2xl">₹50.00</p>
+            <p class="text-primary text-2xl">₹30</p>
           </div>
         </div>
 
         <div class="relative shadow-md rounded-lg">
-          <img class="rounded-t-lg h-70 md:w-full" src="./Images/cooler.png" alt="" />
+          <img class="rounded-t-lg h-70 w-full" src="./Images/cooler.png" alt="" />
 
           <div class="p-5 flex flex-col gap-2">
-            <h5 class="text-2xl tracking-tight">Premium Alkaline Water (20L)</h5>
+            <h5 class="text-2xl">Premium Alkaline Water (20L)</h5>
 
             <p class="font-be-vietnam text-[#585858] text-[0.9rem]">Experience the health benefits of our top-quality
               alkaline water, perfectly balanced for optimal hydration.</p>
-            <p class="text-primary text-2xl">₹100.00</p>
+            <p class="text-primary text-2xl">₹30</p>
           </div>
         </div>
 
         <div class="relative shadow-md rounded-lg">
-          <img class="rounded-t-lg h-70 md:w-full" src="./Images/container (2).png" alt="" />
+          <img class="rounded-t-lg h-70 w-full" src="./Images/container (2).png" alt="" />
 
           <div class="p-5 flex flex-col gap-2">
-            <h5 class="text-xl tracking-tight">Advanced Water Filter System (20L)</h5>
+            <h5 class="text-xl">Advanced Water Filter System (20L)</h5>
 
             <p class="font-be-vietnam text-[#585858] text-[0.9rem]">Enjoy clean, safe, and refreshing water with our
               state-of-the-art water filter system, ideal for both home and office use.</p>
-            <p class="text-primary text-2xl">₹80.00</p>
+            <p class="text-primary text-2xl">₹30</p>
           </div>
         </div>
       </div>
@@ -386,7 +386,7 @@
     <div class="container mx-auto sm:px-0 px-4 py-20 flex flex-col items-center gap-4">
       <img src="./Images/Logo (3).png" class="md:w-[20vw]" />
 
-      <ul class="flex flex-col md:flex-row gap-6 md:items-center">
+      <ul class="flex flex-col md:flex-row gap-6 items-center">
         <li>
           <a href="#home" class="nav-link font-poppins hover:text-primary text-base">Home</a>
         </li>
