--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   <meta name="twitter:image" content="https://rk-water.vercel.app/Images/Logo%20(3).png" />
   <meta name="twitter:url" content="https://rk-water.vercel.app/" />
 
+  <meta name="google-site-verification" content="9nMgu2Ictinwz9uEdKKKx_zRWt6LA-P_1r4JLBemfu4" />
+
   <title>R.K. Alkaline Water - Pure, Healthy, and Refreshing Alkaline Water</title>
 
   <!-- Canonical Link -->
