--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,6 @@
   <meta name="twitter:image" content="https://rk-water.vercel.app/Images/Logo%20(3).png" />
   <meta name="twitter:url" content="https://rk-water.vercel.app/" />
 
-  <meta name="google-site-verification" content="9nMgu2Ictinwz9uEdKKKx_zRWt6LA-P_1r4JLBemfu4" />
-
   <title>R.K. Alkaline Water - Pure, Healthy, and Refreshing Alkaline Water</title>
 
   <!-- Canonical Link -->
@@ -62,7 +60,7 @@
     <div class="container mx-auto flex flex-wrap items-center justify-between sm:px-0 px-4 py-5">
       <img src="./Images/Logo (3).png" class="h-4 md:h-6" srcset="" />
 
-      <button id="menu-toggle" type="button" class="items-center p-2 size-10 justify-center rounded-lg md:hidden"
+      <button id="menu-toggle" type="button" class="items-center p-2 size-10 justify-center rounded-2xl md:hidden"
         aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
 
@@ -108,7 +106,8 @@
   <main id="home" class="w-full bg-secondaryLight pt-20 min-h-screen flex flex-col">
     <div class="container mx-auto sm:px-0 px-4 grid grid-cols-1 sm:grid-cols-2 gap-4 flex-1">
       <div class="flex flex-col items-start justify-start sm:justify-center gap-4 order-1 sm:order-none">
-        <p class="leading-normal sm:leading-normal text-primary text-4xl sm:text-5xl font-laila font-bold">
+        <p
+          class="leading-normal sm:leading-normal md:leading-normal text-primary text-3xl sm:text-4xl md:text-5xl font-laila font-bold">
           Pure, Healthy, and <br />
           Refreshing Alkaline <br />
           Water
@@ -245,7 +244,7 @@
       </p>
 
       <div class="flex flex-col">
-        <div class="bg-primary rounded-xl w-full flex py-8 md:flex-row flex-col">
+        <div class="bg-primary rounded-2xl w-full flex py-8 md:flex-row flex-col">
           <div
             class="flex flex-col md:w-[25%] w-full items-center md:border-r-[1px] border-b-[1px] md:border-b-[0px] p-5">
             <p class="text-white font-laila md:text-[2rem] text-[3rem]">3000+</p>
@@ -325,8 +324,8 @@
     <div class="flex flex-col gap-4">
       <h1 class="font-laila text-3xl font-bold">Our <span class="text-primary">Products</span></h1>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-        <div class="relative shadow-md rounded-lg">
-          <img class="rounded-t-lg h-70 w-full" src="./Images/Rectangle 7407.png" alt="" />
+        <div class="relative shadow-md rounded-2xl">
+          <img class="rounded-t-2xl h-70 w-full" src="./Images/Rectangle 7407.png" alt="" />
 
           <div class="p-5 flex flex-col gap-2">
             <h5 class="text-2xl">Alkaline Water Dispenser (20L)</h5>
@@ -337,8 +336,8 @@
           </div>
         </div>
 
-        <div class="relative shadow-md rounded-lg">
-          <img class="rounded-t-lg h-70 w-full" src="./Images/cooler.png" alt="" />
+        <div class="relative shadow-md rounded-2xl">
+          <img class="rounded-t-2xl h-70 w-full" src="./Images/cooler.png" alt="" />
 
           <div class="p-5 flex flex-col gap-2">
             <h5 class="text-2xl">Premium Alkaline Water (20L)</h5>
@@ -349,8 +348,8 @@
           </div>
         </div>
 
-        <div class="relative shadow-md rounded-lg">
-          <img class="rounded-t-lg h-70 w-full" src="./Images/container (2).png" alt="" />
+        <div class="relative shadow-md rounded-2xl">
+          <img class="rounded-t-2xl h-70 w-full" src="./Images/container (2).png" alt="" />
 
           <div class="p-5 flex flex-col gap-2">
             <h5 class="text-xl">Advanced Water Filter System (20L)</h5>
@@ -368,12 +367,11 @@
     <div class="flex flex-col gap-4">
       <h1 class="font-laila text-3xl font-bold">Our <span class="text-primary">Customers</span></h1>
       <div class="flex flex-col gap-2">
-        <div class="grid grid-cols-2 gap-2">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-2">
           <img src="./Images/customer.png" class="w-full" alt="Customer 1" />
 
           <img src="./Images/customer2.png" class="w-full" alt="Customer 2" />
-        </div>
-        <div class="grid grid-cols-3 gap-2">
+
           <img src="./Images/customer3.png" class="w-full" alt="Customer 3" />
 
           <img src="./Images/customer4.png" class="w-full" alt="Customer 4" />
