update what's inside section

--- a/public/index.html
+++ b/public/index.html
@@ -175,9 +175,11 @@
         R.K. Alkaline Water is enriched with essential minerals that contribute to your overall health and well-being.
         Here’s a detailed look at the mineral composition of our water:
       </p>
-      <div class="flex md:w-[70vw] w-full md:flex-row flex-col items-center justify-center">
-        <img src="./Images/Inside.png" class="md:hidden block w-[25rem] h-fit" />
-        <div class="md:max-w-[22vw] mt-5 h-full flex flex-col justify-between items-center">
+      <div class="grid grid-cols-1 md:grid-cols-4 items-center gap-4">
+        <div class="md:hidden flex justify-center h-80">
+          <img src="./Images/Inside.png" class="h-full" />
+        </div>
+        <div class="h-full flex flex-col justify-between items-center">
           <div class="">
             <p class="font-laila text-primary font-bold text-[1.2rem] md:text-left text-center">Calcium</p>
             <p class="text-secondary font-laila font-semibold md:text-left text-center">5-12 mg/dm³</p>
@@ -202,8 +204,10 @@
             </p>
           </div>
         </div>
-        <img src="./Images/Inside.png" class="md:block hidden w-[25rem] h-fit" />
-        <div class="md:max-w-[30vw] mt-5 h-full flex flex-col justify-between items-center">
+        <div class="md:block hidden md:col-span-2 h-96">
+          <img src="./Images/Inside.png" class="h-full" />
+        </div>
+        <div class="h-full flex flex-col justify-between items-center">
           <div class="">
             <p class="font-laila text-primary font-bold text-[1.2rem] md:text-right text-center">Chlorine</p>
             <p class="text-secondary font-laila font-semibold md:text-right text-center">~46 mg/dm³</p>
