added links for order now & contact us button

--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,8 @@
           Water
         </p>
         <p class="font-be-vietnam font-medium text-xl">Delivering the goodness of alkaline water to your doorstep</p>
-        <button type="button" class="text-white rounded-md bg-btn-gradient font-be-vietnam px-4 py-2 shadow-md">Order
-          Now</button>
+        <a href="#contact-us" class="text-white rounded-md bg-btn-gradient font-be-vietnam px-4 py-2 shadow-md">Order
+          Now</a>
       </div>
 
       <div class="flex justify-center items-center">
@@ -141,8 +141,8 @@
 
         <p class="font-bold text-lg font-normal font-be-vietnam">Choose R.K. Alkaline Water for a balanced, healthy
           lifestyle. Cheers to a healthier, more hydrated you!</p>
-        <button type="button" class="text-white rounded-md bg-btn-gradient font-be-vietnam px-4 py-2 shadow-md">Contact
-          Us</button>
+        <a href="#contact-us" class="text-white rounded-md bg-btn-gradient font-be-vietnam px-4 py-2 shadow-md">Contact
+          Us</a>
       </div>
       <div>
         <img src="./Images/aboutus.png" class="w-full h-fit" />
@@ -204,7 +204,7 @@
             </p>
           </div>
         </div>
-        <div class="md:block hidden md:col-span-2 h-96">
+        <div class="md:flex hidden md:col-span-2 justify-center items-center h-96">
           <img src="./Images/Inside.png" class="h-full" />
         </div>
         <div class="h-full flex flex-col justify-between items-center">
