--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 <body>
   <nav class="bg-white fixed top-0 w-full z-50 shadow-sm">
     <div class="container mx-auto flex flex-wrap items-center justify-between sm:px-0 px-4 py-5">
-      <img src="./Images/Logo (3).png" class="h-4 md:h-6" srcset="" />
+      <img src="./Images/logo.png" class="h-4 md:h-6" srcset="" />
 
       <button id="menu-toggle" type="button" class="items-center p-2 size-10 justify-center rounded-2xl md:hidden"
         aria-controls="navbar-default" aria-expanded="false">
@@ -145,7 +145,7 @@
           Us</a>
       </div>
       <div>
-        <img src="./Images/aboutus.png" class="w-full h-fit" />
+        <img src="./Images/mdCustomer1.png" class="w-full h-fit" />
       </div>
 
       <div class="border flex flex-col p-8 w-full gap-4 rounded-md">
@@ -388,7 +388,7 @@
 
   <footer id="contact-us" class="bg-[#FAFAFA]">
     <div class="container mx-auto sm:px-0 px-4 py-20 flex flex-col items-center gap-4">
-      <img src="./Images/Logo (3).png" class="md:w-[20vw]" />
+      <img src="./Images/logo.png" class="md:w-[20vw]" />
 
       <ul class="flex flex-col md:flex-row gap-6 items-center">
         <li>
@@ -475,57 +475,13 @@
       </div>
       <div>
         <p class="text-gray-400 font-be-vietnam text-center">©&nbsp;R.K.Water 2024 | All rights reserved.</p>
-        <p class="text-gray-400 font-be-vietnam text-center">Designed By <a href="https://akashb.vercel.app/"
-            target="_blank" class="text-primary">Akash Bambhaniya</a></p>
+        <p class="text-gray-400 font-be-vietnam text-center">Made By <a href="https://akashb.in" target="_blank"
+            class="text-primary">Akash Bambhaniya</a></p>
       </div>
     </div>
   </footer>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const menuToggle = document.getElementById("menu-toggle");
-      const navbarDefault = document.getElementById("navbar-default");
-      const menuIcon = document.getElementById("menu-toggle-icon");
-      const closeIcon = document.getElementById("menu-toggle-x");
-
-      menuToggle.addEventListener("click", function () {
-        // Toggle the visibility of the navbar
-        navbarDefault.classList.toggle("hidden");
-
-        // Toggle between the menu and close icons
-        menuIcon.classList.toggle("hidden");
-        closeIcon.classList.toggle("hidden");
-      });
-    });
-  </script>
+  <script src="./app.js"></script>
 </body>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const navLinks = document.querySelectorAll(".nav-link");
-    const currentHash = window.location.hash;
-
-    navLinks.forEach((link) => {
-      if (link.getAttribute("href") === currentHash) {
-        link.classList.add("text-primary");
-      } else {
-        link.classList.remove("text-primary");
-      }
-    });
-
-    // Optional: Update the active link on hash change
-    window.addEventListener("hashchange", function () {
-      const newHash = window.location.hash;
-
-      navLinks.forEach((link) => {
-        if (link.getAttribute("href") === newHash) {
-          link.classList.add("text-primary");
-        } else {
-          link.classList.remove("text-primary");
-        }
-      });
-    });
-  });
-</script>
 
 </html>
